<resources>
    <string name="app_name">Dankook World</string>
    <string name="hw">회원</string>
    <string name="bhw">비회원</string>
    <string name="information">회원가입시 정보등록이 가능해집니다.</string>

    //로그인 및 회원가입
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="id"> 아이디</string>
    <string name="password">비밀번호</string>
    <string name="naver">NAVER 로그인</string>
    <string name="kakao">KAKAO 로그인</string>
    <string name="facebook">FACEBOOK 로그인</string>
    <string name="name"> 이름</string>
    <string name="phone"> 전화번호</string>
    <string name="birthday"> 생년월일</string>
    <string name="address"> 주소</string>
    <string name="password1"> 비밀번호 확인</string>
    <string name="password2">●●●●●●●</string>

    // 햄버거
    <string name="today">오늘의 LAND</string>
    <string name="time">운영시간</string>
    <string name="notice">공지사항</string>
    <string name="qr">QR 코드</string>
    <string name="event">이벤트</string>
    <string name="map">지도</string>
    <string name="coupon">쿠폰함</string>
    <string name="setting">설정</string>

    //food1
    <string name="restaurant1">니뽕내뽕</string>
    <string name="explainres1">다양한 퓨전 짬뽕 및 피자가 준비되어있습니다.</string>
    <string name="popmenu">대표메뉴</string>
    <string name="timeres1">AM10:00 ~ PM08:00</string>
    <string name="popmenures1">크림짬뽕, 로제짬뽕, 고구마피자</string>
    <string name="phoneres1">02-9376-1111</string>
    //food2
    <string name="restaurant2">McDonalds</string>
    <string name="explainres2">다양한 햄버거 세트가 준비되어있습니다.</string>
    <string name="timeres2">AM10:00 ~ PM09:30</string>
    <string name="popmenures2">빅맥, 상하이버거, 1955버거</string>
    <string name="phoneres2">1544-1111</string>
    //food3
    <string name="restaurant3">베트남노상식당</string>
    <string name="explainres3">퓨전 베트남 음식이 준비되어있습니다.</string>
    <string name="timeres3">AM10:00 ~ PM08:30</string>
    <string name="popmenures3">양지 쌀국수, 분짜, 월남쌈</string>
    <string name="phoneres3">02-2661-1234</string>
    //food4
    <string name="restaurant4">GS25</string>
    <string name="explainres4">다양한 생필품 및 도시락이 준비되어있습니다.</string>
    <string name="timeres4">AM9:30 ~ PM11:00</string>
    <string name="popmenures4">생수, 음료, 도시락, 샌드위치</string>
    <string name="phoneres4">02-2662-2222</string>


    //설정- 개인정보 변경 저장
    <string name="save">저장하기</string>

    // 지도
    <string name="wait">대기시간</string>
    <string name="food">음식점</string>
    <string name="attraction">어트랙션</string>
    <string name="store">상점</string>

    // 아이등록
    <string name="cregister">우리 아이 등록</string>
    <string name="cinform">아이의 간단한 정보를 입력해주세요!</string>
    <string name="register">내 정보 등록</string>
    <string name="nonmember">비회원은 필수로 입력하여야 합니다.</string>
    <string name="titleactivitymain2">Main2Activity</string>
    <string name="navigationdraweropen">Open navigation drawer</string>
    <string name="navigationdrawerclose">Close navigation drawer</string>
    <string name="navheadertitle">Android Studio</string>
    <string name="navheadersubtitle">android.studio@android.com</string>
    <string name="navheaderdesc">Navigation header</string>
    <string name="actionsettings">Settings</string>
    <string name="cregcen">아이 정보 초기화</string>
    <string name="cregad">아이 정보 수정</string>
    <string name="cscan">보호자 정보 확인</string>
    <string name="noinfo">보호자 정보가 존재하지 않습니다.</string>
    <string name="noinfo2">아이 정보가 존재하지 않습니다.</string>
    <string name="childfind">아래의 정보를 통해 아이의 보호자를 찾아주세요!\n\n 아이에게 즐거운 놀이동산의 추억을 선사할 수 있습니다:) </string>

    <string name="childaname">아이 이름</string>
    <string name="childage">아이 나이 </string>
    <string name="menuhome">Home</string>
    <string name="menugallery">Gallery</string>
    <string name="menuslideshow">Slideshow</string>
    <string name="menutools">Tools</string>
    <string name="menushare">Share</string>
    <string name="menusend">Send</string>

    <string name="mobile">mobile</string>
    <string name="message">message</string>
    <string name="direction">direction</string>

    <string name="changesave">save changes</string>

    <string name="noticename">작성자</string>
    <string name="noticedate">2019-11-06</string>


    <string name="eventtime">2019-12-01 20:00</string>
    <string name="eventlocation">자이로스윙 앞</string>
    <string name="eventname">유령들의 댄스배틀</string>

    <string name="infoexplainres1">안내데스크에서는 아래와 같은 서비스를 제공하고 있습니다.</string>
    <string name="popservice">제공 서비스</string>
    <string name="info1">정문 인포메이션</string>

    <string name="explore">탐험하기</string>
    <string name="person">탑승인원</string>
    <string name="attrationinfo">이용정보</string>
    <string name="person2">6명</string>
    <string name="attractioninfo2">110cm 이상 탑승 가능/\n 65세 이하 탑승 가능</string>
    <string name="send">보호자에게 알리기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
