<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto"
    xmlns:tools= "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context="MainActivity"
    tools:layout_editor_absoluteY="-125dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="370dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/food2" />

        <TextView
            android:id="@+id/res1_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/info1"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/res1_ex"
            android:layout_width="415dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/infoexplainres1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/cir_border"
        android:layout_marginTop="17dp">

        <TextView
            android:id="@+id/res1_menu"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/popservice"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/res1_pop_menu"
            android:layout_width="221dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="가이드맵제공, 공연시간 안내"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/cir_border"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/res1_time"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:gravity="left"
            android:text="@string/time"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/res1_in_time"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/timeres1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/cir_border"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/res1_phone"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:gravity="left"
            android:text="@string/phone"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/res1_in_phone"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/phoneres1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
    </LinearLayout>


</LinearLayout>


