<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noticeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/purple"
            android:drawableLeft="@drawable/ic_textsms_black_24dp"
            android:padding="10dp"
            android:text="@string/notice"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:background="@color/purple"
        android:gravity="center"
        android:text="어쩌고 저쩌고 샬라샬라 공지한다."
        android:textColor="@android:color/background_light" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:padding="3dp"
                android:text="@string/noticename"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="100sp"
                android:padding="3dp"
                android:text="@string/noticedate"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />
        </LinearLayout>
    </LinearLayout>
