<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_2"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="35sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50sp"
                android:ems="10"
                android:hint="@string/name"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/birthday"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/birth"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginRight="50sp"
                android:ems="10"
                android:hint="@string/birthday"
                android:inputType="textPostalAddress"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/phone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginRight="50sp"
                android:ems="10"
                android:hint="@string/phone"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginRight="50sp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/id"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/insertId"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginRight="50sp"
                android:ems="10"
                android:hint="@string/id"
                android:inputType="textPostalAddress"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/insertPwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50sp"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="15sp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/password1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/insertPwdd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50sp"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="number"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="412dp"
            android:layout_height="60dp"
            android:background="@color/purple"
            android:text="@string/change_save" />


    </LinearLayout>

</LinearLayout>
