<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto"
    xmlns:tools= "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context="MainActivity"
    tools:layout_editor_absoluteY="-125dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/storeImage" />

        <TextView
            android:id="@+id/res4_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/restaurant1"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/res4_ex"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="여러가지 캐릭터 상품들을 만나보세요"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/cir_border"
        android:layout_marginTop="17dp">

        <TextView
            android:id="@+id/res4_menu"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:gravity="left"
            android:text="이용정보"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/store1"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="메뉴 종류"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/cir_border"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/res"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:gravity="left"
            android:text="@string/time"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/store2"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/timeres1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/cir_border"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/res4_phone"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:gravity="left"
            android:text="@string/phone"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/store3"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/phoneres1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
    </LinearLayout>


</LinearLayout>


